@@ -1,10 +1,10 @@
-Listen 192.168.1.100:8080
-ServerName 192.168.1.100
-<VirtualHost 192.168.1.100:8080>
+#Listen 192.168.1.100:8080
+#ServerName 192.168.1.100
+#<VirtualHost 192.168.1.100:8080>
 
-#Listen 127.0.0.1:8080
-#ServerName 127.0.0.1
-#<VirtualHost 127.0.0.1:8080>
+Listen 127.0.0.1:8080
+ServerName 127.0.0.1
+<VirtualHost 127.0.0.1:8080>
 
 	DocumentRoot /var/www/blotomate/public
 	<Directory /var/www/blotomate/public>
