@@ -99,3 +99,11 @@ HORAS TRABALHADAS: 2h
 - Alteracao no backend, inclusao de script para gerenciamento do aggregator
 
 HORAS TRABALHADAS: 8h
+
+==========
+16/04/2009
+==========
+
+- Ajustes na exibição de feeds
+
+HORAS TRABALHADAS: 2h
